# CandidateInterview_Evaluation_Agent

./: agent_test.py  app.py  pyproject.toml  requirements.txt
Test/: experiment.ipynb
